@@ -315,23 +315,6 @@ public class HandleView : TreeView
 		return pointer_list_view_next (Raw);
 	}
 
-	[DllImport ("libmuine")]
-	private static extern int pointer_list_view_get_index_of (IntPtr view,
-							          IntPtr handle);
-
-	public int GetIndexOf (IntPtr handle)
-	{
-		return pointer_list_view_get_index_of (Raw, handle);
-	}
-
-	[DllImport ("libmuine")]
-	private static extern void pointer_list_view_state_changed (IntPtr view);
-
-	public new void StateChanged ()
-	{
-		pointer_list_view_state_changed (Raw);
-	}
-
 	private delegate void SignalDelegate (IntPtr obj, IntPtr ptr);
 
 	private static void PointerActivatedCallback (IntPtr obj, IntPtr ptr)
